AlgParser2.cpp
/*
* Copyright 2026 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the Algol60 parser library.
*
* The following is the license that applies to this copy of the
* library. For a license to use the library under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

// generated with EbnfStudio and then AST generation manually added

#include <Algol60/AlgParser2.h>
#include <Algol60/AlgLexer.h>
#include <QFileInfo>
using namespace Alg;

static inline bool FIRST_program(int tt) {
	switch(tt){
	case Tok_ARRAY:
	case Tok_BEGIN:
	case Tok_BOOLEAN:
	case Tok_FOR:
	case Tok_GO:
	case Tok_GOTO:
	case Tok_IF:
	case Tok_INTEGER:
	case Tok_OWN:
	case Tok_PROCEDURE:
	case Tok_REAL:
	case Tok_SWITCH:
	case Tok_Semi:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_declarations_(int tt) {
	switch(tt){
	case Tok_ARRAY:
	case Tok_BOOLEAN:
	case Tok_INTEGER:
	case Tok_OWN:
	case Tok_PROCEDURE:
	case Tok_REAL:
	case Tok_SWITCH:
		return true;
	default: return false;
	}
}

static inline bool FIRST_compoundBlock_(int tt) {
	return tt == Tok_BEGIN;
}

static inline bool FIRST_statementList_(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_FOR:
	case Tok_GO:
	case Tok_GOTO:
	case Tok_IF:
	case Tok_Semi:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_compound_tail(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_END:
	case Tok_FOR:
	case Tok_GO:
	case Tok_GOTO:
	case Tok_IF:
	case Tok_Semi:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_declaration(int tt) {
	switch(tt){
	case Tok_ARRAY:
	case Tok_BOOLEAN:
	case Tok_INTEGER:
	case Tok_OWN:
	case Tok_PROCEDURE:
	case Tok_REAL:
	case Tok_SWITCH:
		return true;
	default: return false;
	}
}

static inline bool FIRST_type_declaration(int tt) {
	return tt == Tok_BOOLEAN || tt == Tok_INTEGER || tt == Tok_OWN || tt == Tok_REAL;
}

static inline bool FIRST_local_or_own_type(int tt) {
	return tt == Tok_BOOLEAN || tt == Tok_INTEGER || tt == Tok_OWN || tt == Tok_REAL;
}

static inline bool FIRST_type(int tt) {
	return tt == Tok_BOOLEAN || tt == Tok_INTEGER || tt == Tok_REAL;
}

static inline bool FIRST_type_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_array_declaration(int tt) {
	return tt == Tok_ARRAY || tt == Tok_BOOLEAN || tt == Tok_INTEGER || tt == Tok_OWN || tt == Tok_REAL;
}

static inline bool FIRST_array_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_array_segment(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_bound_pair_list(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_bound_pair(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_upper_bound(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_lower_bound(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_switch_declaration(int tt) {
	return tt == Tok_SWITCH;
}

static inline bool FIRST_switch_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_switch_list(int tt) {
	return tt == Tok_IF || tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_procedure_declaration(int tt) {
	return tt == Tok_BOOLEAN || tt == Tok_INTEGER || tt == Tok_PROCEDURE || tt == Tok_REAL;
}

static inline bool FIRST_procedure_heading(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_procedure_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_formal_parameter_part(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_formal_parameter_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_formal_parameter(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_value_part(int tt) {
	return tt == Tok_VALUE;
}

static inline bool FIRST_specification_part(int tt) {
	switch(tt){
	case Tok_ARRAY:
	case Tok_BOOLEAN:
	case Tok_INTEGER:
	case Tok_LABEL:
	case Tok_PROCEDURE:
	case Tok_REAL:
	case Tok_STRING:
	case Tok_SWITCH:
		return true;
	default: return false;
	}
}

static inline bool FIRST_specifier(int tt) {
	switch(tt){
	case Tok_ARRAY:
	case Tok_BOOLEAN:
	case Tok_INTEGER:
	case Tok_LABEL:
	case Tok_PROCEDURE:
	case Tok_REAL:
	case Tok_STRING:
	case Tok_SWITCH:
		return true;
	default: return false;
	}
}

static inline bool FIRST_identifier_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_procedure_body(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_FOR:
	case Tok_GO:
	case Tok_GOTO:
	case Tok_IF:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_statement(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_FOR:
	case Tok_GO:
	case Tok_GOTO:
	case Tok_IF:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_unconditional_statement(int tt) {
	return tt == Tok_BEGIN || tt == Tok_GO || tt == Tok_GOTO || tt == Tok_identifier;
}

static inline bool FIRST_basic_statement(int tt) {
	return tt == Tok_GO || tt == Tok_GOTO || tt == Tok_identifier;
}

static inline bool FIRST_label(int tt) {
	return tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_unlabelled_basic_statement(int tt) {
	return tt == Tok_GO || tt == Tok_GOTO || tt == Tok_identifier;
}

static inline bool FIRST_procedureOrAssignmentStmt_(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_go_to_statement(int tt) {
	return tt == Tok_GO || tt == Tok_GOTO;
}

static inline bool FIRST_actual_parameter_list(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_string:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_parameter_delimiter(int tt) {
	return tt == Tok_Comma || tt == Tok_Rpar;
}

static inline bool FIRST_actual_parameter(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_string:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_conditional_statement(int tt) {
	return tt == Tok_IF;
}

static inline bool FIRST_if_clause(int tt) {
	return tt == Tok_IF;
}

static inline bool FIRST_for_statement(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_for_clause(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_for_list(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_for_list_element(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_expression(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_arithmetic_expression(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_simple_arithmetic_expression(int tt) {
	switch(tt){
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_adding_operator(int tt) {
	return tt == Tok_Minus || tt == Tok_Plus;
}

static inline bool FIRST_term(int tt) {
	return tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_multiplying_operator(int tt) {
	switch(tt){
	case Tok_DIV:
	case Tok_MOD:
	case Tok_Percent:
	case Tok_Slash:
	case Tok_Star:
	case Tok_Udiv:
	case Tok_Umul:
		return true;
	default: return false;
	}
}

static inline bool FIRST_factor(int tt) {
	return tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_power_sym_(int tt) {
	return tt == Tok_2Star || tt == Tok_Hat || tt == Tok_POWER || tt == Tok_Uexp;
}

static inline bool FIRST_primary(int tt) {
	return tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_designational_expression(int tt) {
	return tt == Tok_IF || tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_simple_designational_expression(int tt) {
	return tt == Tok_Lpar || tt == Tok_decimal_number || tt == Tok_identifier || tt == Tok_unsigned_integer;
}

static inline bool FIRST_Boolean_expression(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_simple_Boolean(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_equiv_sym_(int tt) {
	return tt == Tok_2Eq || tt == Tok_EQUIV || tt == Tok_Ueq;
}

static inline bool FIRST_implication(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_impl_sym_(int tt) {
	return tt == Tok_IMPL || tt == Tok_MinusGt || tt == Tok_Uimpl;
}

static inline bool FIRST_Boolean_term(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_or_sym_(int tt) {
	return tt == Tok_Bar || tt == Tok_OR || tt == Tok_Uor;
}

static inline bool FIRST_Boolean_factor(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_and_sym_(int tt) {
	return tt == Tok_AND || tt == Tok_Amp || tt == Tok_Uand;
}

static inline bool FIRST_Boolean_secondary(int tt) {
	switch(tt){
	case Tok_Bang:
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_NOT:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_Unot:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_not_sym_(int tt) {
	return tt == Tok_Bang || tt == Tok_NOT || tt == Tok_Unot;
}

static inline bool FIRST_Boolean_primary(int tt) {
	switch(tt){
	case Tok_FALSE:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_TRUE:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_relation(int tt) {
	switch(tt){
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_relational_operator(int tt) {
	switch(tt){
	case Tok_BangEq:
	case Tok_EQUAL:
	case Tok_Eq:
	case Tok_GREATER:
	case Tok_Geq:
	case Tok_Gt:
	case Tok_HatEq:
	case Tok_LESS:
	case Tok_Leq:
	case Tok_Lt:
	case Tok_LtGt:
	case Tok_NOTEQUAL:
	case Tok_NOTGREATER:
	case Tok_NOTLESS:
	case Tok_Ugeq:
	case Tok_Uleq:
	case Tok_Uneq:
		return true;
	default: return false;
	}
}

static inline bool FIRST_variableOrFunction_(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_variable(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_simple_variable(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_variable_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_subscript_list(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_subscript_expression(int tt) {
	switch(tt){
	case Tok_IF:
	case Tok_Lpar:
	case Tok_Minus:
	case Tok_Plus:
	case Tok_decimal_number:
	case Tok_identifier:
	case Tok_unsigned_integer:
		return true;
	default: return false;
	}
}

static inline bool FIRST_unsigned_number(int tt) {
	return tt == Tok_decimal_number || tt == Tok_unsigned_integer;
}

static inline bool FIRST_letter_string(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_logical_value(int tt) {
	return tt == Tok_FALSE || tt == Tok_TRUE;
}

Parser2::~Parser2()
{
    if( thisMod )
        Declaration::deleteAll(thisMod);
}

Declaration* Parser2::RunParser() {
    errors.clear();
    next();
    return module();
}

Declaration* Parser2::takeResult() {
    Declaration* res = thisMod;
    thisMod = 0;
    return res;
}

void Parser2::next() {
    cur = la;
    la = scanner->next();
    while( la.d_type == Tok_Invalid ) {
        errors << Error(la.d_val, toRowCol(la), la.d_sourcePath);
        la = scanner->next();
    }
}

Token Parser2::peek(int off) {
    if( off == 1 )
        return la;
    else if( off == 0 )
        return cur;
    else
        return scanner->peek(off-1);
}

void Parser2::invalid(const char* what) {
    errors << Error(QString("invalid %1").arg(what), toRowCol(la), la.d_sourcePath);
}

bool Parser2::expect(int tt, bool pkw, const char* where) {
    if( la.d_type == tt || la.d_code == tt) { next(); return true; }
    else { errors << Error(QString("'%1' expected in %2").arg(tokenTypeString(tt)).arg(where),
                           toRowCol(la), la.d_sourcePath); return false; }
}

void Parser2::error(const Token& t, const QString& msg) {
    errors << Error(msg, toRowCol(t), t.d_sourcePath);
}

RowCol Parser2::toRowCol(const Token& t) const {
    return RowCol(t.d_lineNr, t.d_colNr);
}

Declaration* Parser2::addLabel(const Token& t) {
    // a label is either an identifier or an unsigned integer
    const char* sym = t.d_id ? t.d_id : Lexer::toId(t.d_val);
    Declaration* d = mdl->addDecl(sym, t.d_val, Declaration::LabelDecl);
    d->pos = toRowCol(t);
    d->setType(mdl->getType(Type::Label));
    return d;
}

Declaration* Parser2::findParam(Declaration* procDecl, const Token& id) {
    Declaration* param = procDecl->link;
    while( param ) {
        if( param->kind == Declaration::Parameter && param->sym == id.d_id )
            return param;
        param = param->next;
    }
    return 0;
}

Declaration* Parser2::declInScope(Declaration* scope, const Token& id, Type* t, bool isArray, bool isProcedure) {
    Declaration* d = new Declaration(isArray ? Declaration::Array : Declaration::Variable);
    d->name = id.d_val;
    d->sym = id.d_id;
    d->pos = toRowCol(id);
    if( scope ) {
        d->outer = scope;
        scope->appendMember(d);
    }
    if( isArray ) {
        Type* arrType = new Type(Type::Array);
        arrType->setType(t ? t : mdl->getType(Type::Real));
        d->setType(arrType);
    } else if( isProcedure ) {
        Type* procType = new Type(Type::Procedure);
        procType->setType(t ? t : mdl->getType(Type::NoType));
        d->setType(procType);
        d->kind = Declaration::Procedure;
    } else
        d->setType(t);
    return d;
}

static inline void appendStmt(Statement*& first, Statement*& last, Statement* s) {
    if( s == 0 )
        return;
    if( last )
        last->append(s);
    else
        first = s;
    last = s;
    while( last->next )
        last = last->next;
}

static inline bool isLabelAhead(const Token& t1, const Token& t2) {
    return ( t1.d_type == Tok_identifier || t1.d_type == Tok_unsigned_integer ) && t2.d_type == Tok_Colon;
}

Declaration* Parser2::module() {
    Declaration* mod = new Declaration(Declaration::Module);
    if( thisMod )
        Declaration::deleteAll(thisMod);
    thisMod = mod;

    mod->path = new QString(scanner->source());
    mod->name = QFileInfo(*mod->path).baseName().toUtf8();
    mod->sym = Lexer::toId(mod->name);
    mod->pos = toRowCol(la);

    mdl->openScope(mod);

    Declaration* prog = mdl->addDecl(mod->sym, mod->name, Declaration::Program);
    prog->pos = toRowCol(la);
    prog->setType(mdl->getType(Type::NoType));

    mdl->openScope(prog);
    prog->body = program();
    mdl->closeScope();

    mdl->closeScope();

    if( la.d_type != Tok_Eof )
        error(la, "unexpected token after end of program");

    return mod;
}

Statement* Parser2::program() {
    Statement* res = 0;
    Statement* last = 0;

    while( isLabelAhead(peek(1),peek(2)) ) {
        const Token lbl = label();
        expect(Tok_Colon, false, "program");
        Statement* s = new Statement(Statement::Label, toRowCol(lbl));
        s->label = addLabel(lbl);
        appendStmt(res, last, s);
    }
    if( FIRST_declarations_(la.d_type) || FIRST_declarations_(la.d_code) ) {
        declarations_();
    }
    appendStmt(res, last, statementList_());
    return res;
}
